--- a/mobile/android/base/resources/layout/site_identity.xml
+++ b/mobile/android/base/resources/layout/site_identity.xml
@@ -13,7 +13,7 @@
                   android:orientation="horizontal"
                   android:paddingLeft="@dimen/doorhanger_section_padding_small"
                   android:paddingRight="@dimen/doorhanger_section_padding_small"
-                  android:paddingBottom="@dimen/doorhanger_section_padding_medium"
+                  android:paddingBottom="@dimen/doorhanger_section_padding_large"
                   android:paddingTop="@dimen/doorhanger_section_padding_medium">
 
         <ImageView android:id="@+id/site_identity_icon"
@@ -31,19 +31,18 @@
             <TextView android:id="@+id/site_identity_title"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:layout_marginBottom="@dimen/doorhanger_subsection_padding"
                       android:textAppearance="@style/TextAppearance.DoorHanger.Medium.Light"/>
 
             <TextView android:id="@+id/site_identity_state"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:layout_marginBottom="@dimen/doorhanger_section_padding_medium"
+                      android:layout_marginTop="@dimen/doorhanger_subsection_padding"
                       android:textAppearance="@style/TextAppearance.DoorHanger.Medium.Bold"/>
 
             <TextView android:id="@+id/mixed_content_activity"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:layout_marginBottom="@dimen/doorhanger_section_padding_medium"
+                      android:layout_marginTop="@dimen/doorhanger_section_padding_medium"
                       android:textAppearance="@style/TextAppearance.DoorHanger.Medium"
                       android:visibility="gone"/>
 
@@ -56,18 +55,19 @@
                 <TextView android:id="@+id/owner"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
+                          android:layout_marginTop="@dimen/doorhanger_section_padding_small"
                           android:textAppearance="@style/TextAppearance.DoorHanger.Medium"
                           android:textStyle="bold"/>
 
                 <TextView android:id="@+id/owner_supplemental"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
-                          android:layout_marginBottom="@dimen/doorhanger_section_padding_medium"
                           android:textAppearance="@style/TextAppearance.DoorHanger.Medium"/>
 
                 <TextView android:id="@+id/verifier"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
+                          android:layout_marginTop="@dimen/doorhanger_section_padding_medium"
                           android:textAppearance="@style/TextAppearance.DoorHanger.Medium.Light"/>
 
             </LinearLayout>
@@ -77,7 +77,6 @@
                       android:textAppearance="@style/TextAppearance.DoorHanger.Medium"
                       android:textColor="@color/link_blue"
                       android:layout_marginTop="@dimen/doorhanger_section_padding_large"
-                      android:layout_marginBottom="@dimen/doorhanger_section_padding_medium"
                       android:text="@string/contextmenu_site_settings"
                       android:visibility="gone"/>
          </LinearLayout>
